--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <title>Daily Organizer</title>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="description" content="Website for day organizing">
 </head>
 <body>
+    <header>
+        <h1>
+            Daily Organizer
+        </h1>
+        <h2>
+            <a href="#">Profile</a>
+        </h2>
+    </header>
+    <main>
+        <nav>
+            <a href="#">new routine</a>
+            <a href="#">new task</a>
+            <a href="#">new goal</a>
+            <a href="#">new reminder</a>
+            <a href="#">new note</a>
+        </nav>
+        <pre>
++---------------------+
+|     Апрель 2022     |
++---------------------+
+| Пн Вт Ср Чт Пт Сб Вс|
++---------------------+
+|              1| 2| 3|
+|  4| 5| 6| 7| 8| 9|10|
+| 11|12|13|14|15|16|17|
+| 18|19|20|21|22|23|24|
+| 25|26|27|28|29|30|  |
++---------------------+
+        </pre>
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
