--- a/html/index.html
+++ b/html/index.html
@@ -7,36 +7,106 @@
 </head>
 <body>
     <header>
-        <h1>
-            Daily Organizer
-        </h1>
-        <h2>
-            <a href="#">Profile</a>
-        </h2>
+        <div>
+            <h1>
+                Daily Organizer
+            </h1>
+        </div>
+        <div>
+            <h2>
+                <a href="#">My Profile</a>
+            </h2>
+        </div>
     </header>
     <main>
-        <nav>
-            <a href="#">new routine</a>
-            <a href="#">new task</a>
-            <a href="#">new goal</a>
-            <a href="#">new reminder</a>
-            <a href="#">new note</a>
-        </nav>
-        <pre>
-+---------------------+
-|     Апрель 2022     |
-+---------------------+
-| Пн Вт Ср Чт Пт Сб Вс|
-+---------------------+
-|              1| 2| 3|
-|  4| 5| 6| 7| 8| 9|10|
-| 11|12|13|14|15|16|17|
-| 18|19|20|21|22|23|24|
-| 25|26|27|28|29|30|  |
-+---------------------+
-        </pre>
+        <div>
+            <nav>
+                <h3>
+                    <a href="#">new routine</a>
+                    <a href="#">new task</a>
+                    <a href="#">new goal</a>
+                    <a href="#">new reminder</a>
+                    <a href="#">new note</a>
+                </h3>
+            </nav>
+        </div>
+        <div>
+            <pre>
+                +---------------------+
+                |    Сентябрь 2023    |
+                +---------------------+
+                | Пн Вт Ср Чт Пт Сб Вс|
+                +---------------------+
+                |              1| 2| 3|
+                |  4| 5| 6| 7| 8| 9|10|
+                | 11|12|13|14|15|16|17|
+                | 18|19|20|21|22|23|24|
+                | 25|26|27|28|29|30|  |
+                +---------------------+
+            </pre>
+        </div>
+        <div class="info">
+            <div class="deadlines">
+                <h3>
+                    deadlines
+                </h3>
+                <ol>
+                    <li>
+                        <a href="#">task 1</a>
+                    </li>
+                    <li>
+                        <a href="#">task 2</a>
+                    </li>
+                    <li>
+                        <a href="#">task 3</a>
+                    </li>
+                </ol>
+            </div>
+            <div class="routine">
+                <h3>
+                    routine
+                </h3>
+                <ol>
+                    <li>
+                        <a href="#">routine 1</a>
+                    </li>
+                    <li>
+                        <a href="#">routine 2</a>
+                    </li>
+                    <li>
+                        <a href="#">routine 3</a>
+                    </li>
+                </ol>
+            </div>
+        </div>
+        <div class="motivation">
+            <div class="quote">
+                <p>
+                    <q>There are two pains in life. There is the pain of discipline <br>and the pain of disappointment.If you can handle the pain of discipline,<br>then you’ll never have to deal with the pain of disappointment.</q>
+                     &mdash; <cite>Nick Saban</cite>
+                </p>
+            </div>
+            <div class="code">
+                <pre><code>
+                        while (true) {
+                            you.grind();
+                        }
+                </code></pre>
+            </div>
+        </div>
+        <div class="stats">
+            <h3>statistics</h3>
+            <img src="../data/stats.png" alt="stats">
+        </div>
     </main>
     <footer>
+        <div>
+            <h3>
+                <a href="#">About</a>
+                <a href="#">Contacts</a>
+                <a href="#">Help</a>
+            </h3>
+        </div>
     </footer>
 </body>
 </html>
