--- a/html/index.html
+++ b/html/index.html
@@ -8,14 +8,10 @@
 <body>
     <header>
         <div>
-            <h1>
-                Daily Organizer
-            </h1>
+            <h1>Daily Organizer</h1>
         </div>
         <div>
-            <h2>
-                <a href="#">My Profile</a>
-            </h2>
+            <h2><a href="#">My Profile</a></h2>
         </div>
     </header>
     <main>
@@ -47,9 +43,7 @@
         </div>
         <div class="info">
             <div class="deadlines">
-                <h3>
-                    deadlines
-                </h3>
+                <h3>deadlines</h3>
                 <ol>
                     <li>
                         <a href="#">task 1</a>
@@ -63,9 +57,7 @@
                 </ol>
             </div>
             <div class="routine">
-                <h3>
-                    routine
-                </h3>
+                <h3>routine</h3>
                 <ol>
                     <li>
                         <a href="#">routine 1</a>
