--- a/html/index.html
+++ b/html/index.html
@@ -41,23 +41,23 @@
                 +---------------------+
             </pre>
         </div>
-        <div class="info">
+        <section class="tasks">
             <div class="deadlines">
-                <h3>deadlines</h3>
+                <h2>Deadlines</h2>
                 <ol>
                     <li>
-                        <a href="#">task 1</a>
+                        <a href="#">deadline 1</a>
                     </li>
                     <li>
-                        <a href="#">task 2</a>
+                        <a href="#">deadline 2</a>
                     </li>
                     <li>
-                        <a href="#">task 3</a>
+                        <a href="#">deadline 3</a>
                     </li>
                 </ol>
             </div>
-            <div class="routine">
-                <h3>routine</h3>
+            <div class="routines">
+                <h2>Routine</h2>
                 <ol>
                     <li>
                         <a href="#">routine 1</a>
@@ -70,8 +70,10 @@
                     </li>
                 </ol>
             </div>
-        </div>
-        <div class="motivation">
+        </section>
+        <section class="motivation">
+            <h2>Motivation</h2>
+            <h3>Quote of a day</h3>
             <div class="quote">
                 <p>
                     <q>There are two pains in life. There is the pain of discipline <br>and the pain of disappointment.If you can handle the pain of discipline,<br>then you’ll never have to deal with the pain of disappointment.</q>
@@ -79,26 +81,31 @@
                 </p>
             </div>
             <div class="code">
+                <h3>Code of a day</h3>
                 <pre><code>
                         while (true) {
                             you.grind();
                         }
                 </code></pre>
             </div>
-        </div>
-        <div class="stats">
-            <h3>statistics</h3>
+            <div class="success formula">
+                <h3>Success formula</h3>
+                success = hardwork<sup>discipline</sup>
+            </div>
+        </section>
+        <section class="statistics">
+            <h3>Statistics</h3>
             <img src="../data/stats.png" alt="stats">
-        </div>
+        </section>
     </main>
     <footer>
-        <div>
+        <section class="info">
             <h3>
                 <a href="#">About</a>
                 <a href="#">Contacts</a>
                 <a href="#">Help</a>
             </h3>
-        </div>
+        </section>
     </footer>
 </body>
 </html>
