--- a/index.html
+++ b/index.html
@@ -1,111 +1,93 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Daily Organizer</title>
     <meta charset="UTF-8">
     <meta name="description" content="Website for day organizing">
+    <title>Daily Organizer</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <header>
-    <div>
+    <div class="title">
         <h1>Daily Organizer</h1>
     </div>
-    <div>
-        <h2><a href="#">My Profile</a></h2>
-    </div>
+        <a class="profile" href="#">My Profile</a>
 </header>
 <main>
-    <div>
-        <nav>
+    <div class="actions_and_calendar">
+        <nav class="actions">
             <h3>
-                <a href="#">new routine</a>
-                <a href="#">new task</a>
-                <a href="#">new goal</a>
-                <a href="#">new reminder</a>
-                <a href="#">new note</a>
+                <a class="action_button" href="#">New Routine</a>
+                <a class="action_button" href="#">New Task</a>
+                <a class="action_button" href="#">New Goal</a>
+                <a class="action_button" href="#">New Reminder</a>
+                <a class="action_button" href="#">New Note</a>
             </h3>
         </nav>
+        <div class="calendar">
+            <img class="calendar_img" src="images/calendar.png" alt="calendar">
+        </div>
     </div>
-    <div>
-            <pre>
-                +---------------------+
-                |    Сентябрь 2023    |
-                +---------------------+
-                | Пн Вт Ср Чт Пт Сб Вс|
-                +---------------------+
-                |              1| 2| 3|
-                |  4| 5| 6| 7| 8| 9|10|
-                | 11|12|13|14|15|16|17|
-                | 18|19|20|21|22|23|24|
-                | 25|26|27|28|29|30|  |
-                +---------------------+
-            </pre>
+    <div class="users_info">
+        <div class="all_tasks_and_stats">
+            <div class="deadlines_and_stats">
+                <div class="deadlines_container">
+                    <div class="deadlines">
+                        <h2>Deadlines</h2>
+                        <ol>
+                            <li>
+                                deadline 1
+                            </li>
+                            <li>
+                                deadline 2
+                            </li>
+                            <li>
+                                deadline 3
+                            </li>
+                        </ol>
+                    </div>
+                </div>
+                <div class="statistics_container">
+                    <div class="statistics">
+                        <h2>Statistics</h2>
+                        <img class="statistics_img" src="/images/stats.png" alt="stats">
+                    </div>
+                </div>
+            </div>
+            <div class="routines_container">
+                <div class="routines">
+                    <h2>Routine</h2>
+                    <ol>
+                        <li>
+                            routine 1
+                        </li>
+                        <li>
+                            routine 2
+                        </li>
+                        <li>
+                            routine 3
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+        <div class="quote_container">
+            <div class="quote">
+                <h2 class="quote_title">Quote of a day</h2>
+                <p>
+                    <q>Discipline is choosing between what you want now, and what you want most.</q>
+                    &mdash; <cite>Abraham Lincoln</cite>
+                </p>
+            </div>
+        </div>
     </div>
-    <section class="tasks">
-        <div class="deadlines">
-            <h2>Deadlines</h2>
-            <ol>
-                <li>
-                    <a href="#">deadline 1</a>
-                </li>
-                <li>
-                    <a href="#">deadline 2</a>
-                </li>
-                <li>
-                    <a href="#">deadline 3</a>
-                </li>
-            </ol>
-        </div>
-        <div class="routines">
-            <h2>Routine</h2>
-            <ol>
-                <li>
-                    <a href="#">routine 1</a>
-                </li>
-                <li>
-                    <a href="#">routine 2</a>
-                </li>
-                <li>
-                    <a href="#">routine 3</a>
-                </li>
-            </ol>
-        </div>
-    </section>
-    <section class="motivation">
-        <h2>Motivation</h2>
-        <h3>Quote of a day</h3>
-        <div class="quote">
-            <p>
-                <q>There are two pains in life. There is the pain of discipline <br>and the pain of disappointment.If you can handle the pain of discipline,<br>then you’ll never have to deal with the pain of disappointment.</q>
-                &mdash; <cite>Nick Saban</cite>
-            </p>
-        </div>
-        <div class="code">
-            <h3>Code of a day</h3>
-            <pre><code>
-                        while (true) {
-                            you.grind();
-                        }
-                </code></pre>
-        </div>
-        <div class="success formula">
-            <h3>Success formula</h3>
-            success = hardwork<sup>discipline</sup>
-        </div>
-    </section>
-    <section class="statistics">
-        <h3>Statistics</h3>
-        <img src="/data/stats.png" alt="stats">
-    </section>
 </main>
 <footer>
-    <section class="info">
-        <h3>
-            <a href="#">About</a>
-            <a href="#">Contacts</a>
-            <a href="#">Help</a>
-        </h3>
-    </section>
+    <nav class="info_buttons">
+        <a class="info" href="#">About</a>
+        <a class="info" href="#">Contacts</a>
+        <a class="info" href="#">Help</a>
+    </nav>
 </footer>
 </body>
 </html>
