refactor: new stats

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="statistics_container">
                     <div class="statistics">
                         <h2>Statistics</h2>
-                        <img class="statistics_img" src="/images/stats.png" alt="stats">
+                        <img class="statistics_img" src="images/stats.png" alt="stats">
                     </div>
                 </div>
             </div>
