--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Website for day organizing">
+    <script src="scripts/common_script.js"></script>
     <title>Daily Organizer</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -11,10 +12,10 @@
     <div class="title">
         <h1>Daily Organizer</h1>
     </div>
-    <a class="profile" href="#">My Profile</a>
+    <a class="profile" href="profile.html">My Profile</a>
 </header>
 <main>
-    <div class="main">
+    <div class="content">
         <div class="actions_and_calendar">
             <nav class="actions">
                 <h3>
@@ -112,6 +113,9 @@
         <a class="info" href="#">Contacts</a>
         <a class="info" href="#">Help</a>
     </nav>
+    <div class="loading_time">
+        <script src="scripts/loading_time.js"></script>
+    </div>
 </footer>
 </body>
 </html>
