--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
             </tbody>
         </table>
     </div>
+    <div class="random_number">
+        <script src="scripts/common_script.js"></script>
+    </div>
 </main>
 <footer>
     <nav class="info_buttons">
