--- a/profile.html
+++ b/profile.html
@@ -32,6 +32,9 @@
             </div>
         </div>
     </div>
+    <div class="random_number">
+        <script src="scripts/common_script.js"></script>
+    </div>
 </body>
 <footer>
     <nav class="info_buttons">
