--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Profile">
-    <script src="scripts/common_script.js"></script>
     <title>Daily Organizer</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -35,6 +34,7 @@
     <div class="random_number">
         <script src="scripts/common_script.js"></script>
     </div>
+    <script src="scripts/profile_script.js"></script>
 </body>
 <footer>
     <nav class="info_buttons">
