--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="actions_and_calendar">
             <nav class="actions">
                 <h3>
-                    <a class="action_button" href="#">New Routine</a>
+                    <a class="action_button" href="form.html">New Routine</a>
                     <a class="action_button" href="#">New Task</a>
                     <a class="action_button" href="#">New Goal</a>
                     <a class="action_button" href="#">New Reminder</a>
