--- a/profile.html
+++ b/profile.html
@@ -35,7 +35,7 @@
             <strong>Id:</strong> <span id="user-id"></span>
         </div>
         <div id="preloader" class="preloader">
-            <img src="images/loading-thumb.gif" alt="Preloader Animation" style="width: 50px">
+            <img src="images/loading_thumb.gif" alt="Preloader Animation" style="width: 50px">
         </div>
 
         <div id="error-message" class="error-message"></div>
